--- a/spec/fixtures/cassettes/authenticate.yml
+++ b/spec/fixtures/cassettes/authenticate.yml
@@ -31,11 +31,11 @@ http_interactions:
       X-Error-Detail:
       - Invalid email or password.
       X-Runtime:
-      - '0.230102'
+      - '0.268863'
       X-Request-Id:
-      - e54fdb41-cb5b-4729-8768-6c7c0c08c5f3
+      - 444b177f-6f92-4a6b-bec6-7d41265ed25d
       Date:
-      - Wed, 20 Nov 2019 21:24:12 GMT
+      - Sat, 04 Jan 2020 20:33:00 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.4
       Server:
@@ -44,7 +44,7 @@ http_interactions:
       encoding: UTF-8
       string: '{"message":"Invalid email or password."}'
     http_version: 
-  recorded_at: Wed, 20 Nov 2019 21:24:12 GMT
+  recorded_at: Sat, 04 Jan 2020 20:33:00 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/my_account.json
@@ -74,22 +74,22 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       ETag:
-      - W/"3b14c5a480c64596a4d7ff4989e157a1"
+      - W/"ce7b5d7b530f96f5b960a4ce9ecef69f"
       X-Runtime:
-      - '0.066559'
+      - '0.043308'
       X-Request-Id:
-      - 73acb90e-137a-4d65-9c42-afc5095708ee
+      - 85aa05d9-91a0-40a2-bbf1-75627a6de199
       Date:
-      - Wed, 20 Nov 2019 21:24:12 GMT
+      - Sat, 04 Jan 2020 20:33:00 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.4
       Server:
       - nginx/1.17.3 + Phusion Passenger 6.0.4
     body:
       encoding: UTF-8
-      string: '{"_id":"5dd5aefca953302a7b0a248f","created_at":"2019-11-20T21:24:12Z","updated_at":"2019-11-20T21:24:12Z","name":"John","email":"john@doe.net","locale":"en","api_key":"1761b6a361fee8989cd485c7045bac5f8b393563","super_admin":false,"local_admin":false}'
+      string: '{"_id":"5e10f67ca953306bba9a7aa7","created_at":"2020-01-04T20:33:00Z","updated_at":"2020-01-04T20:33:00Z","name":"John","email":"john@doe.net","locale":"en","api_key":"2e887a349c6838dba72a79fa08eea7f29583fb5a","super_admin":false,"local_admin":false}'
     http_version: 
-  recorded_at: Wed, 20 Nov 2019 21:24:12 GMT
+  recorded_at: Sat, 04 Jan 2020 20:33:00 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/tokens.json
@@ -119,25 +119,25 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       ETag:
-      - W/"59339255a6b598004cc42ac5cf26623c"
+      - W/"4accdda042b4fb4ccf3830758c5b985c"
       X-Runtime:
-      - '0.005396'
+      - '0.005005'
       X-Request-Id:
-      - bda1c8a4-a27a-4de7-b8b4-ab19834ea3b7
+      - e4fca8af-9213-4816-a5a3-8085850a0f04
       Date:
-      - Wed, 20 Nov 2019 21:24:12 GMT
+      - Sat, 04 Jan 2020 20:33:00 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.4
       Server:
       - nginx/1.17.3 + Phusion Passenger 6.0.4
     body:
       encoding: UTF-8
-      string: '{"token":"R_APH3Yr3dd9XJznyWyf"}'
+      string: '{"token":"yS6PbZuPKbdyMb25xB4f"}'
     http_version: 
-  recorded_at: Wed, 20 Nov 2019 21:24:12 GMT
+  recorded_at: Sat, 04 Jan 2020 20:33:00 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=R_APH3Yr3dd9XJznyWyf
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=yS6PbZuPKbdyMb25xB4f
     body:
       encoding: US-ASCII
       string: ''
@@ -149,7 +149,7 @@ http_interactions:
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - R_APH3Yr3dd9XJznyWyf
+      - yS6PbZuPKbdyMb25xB4f
   response:
     status:
       code: 200
@@ -166,13 +166,13 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       ETag:
-      - W/"0fb653f991e13c1f1e6f2074eba5eac2"
+      - W/"5641b547b5ad646d9fbceb2ba7c1d635"
       X-Runtime:
-      - '0.013094'
+      - '0.011796'
       X-Request-Id:
-      - 3f938105-d473-4145-95e0-9ca495d7fd1c
+      - d98165a3-a5b8-4eff-a6b7-a55f4db92e8e
       Date:
-      - Wed, 20 Nov 2019 21:24:12 GMT
+      - Sat, 04 Jan 2020 20:33:00 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.4
       Server:
@@ -181,12 +181,12 @@ http_interactions:
       - gzip
     body:
       encoding: UTF-8
-      string: '{"_id":"5dd5aef0a9533026d946a09d","created_at":"2019-11-20T21:24:00Z","updated_at":"2019-11-20T21:24:00Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":true,"local_admin":true}'
+      string: '{"_id":"5e10f493a9533066d4210208","created_at":"2020-01-04T20:24:51Z","updated_at":"2020-01-04T20:24:51Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":true,"local_admin":true}'
     http_version: 
-  recorded_at: Wed, 20 Nov 2019 21:24:12 GMT
+  recorded_at: Sat, 04 Jan 2020 20:33:00 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=R_APH3Yr3dd9XJznyWyf
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=yS6PbZuPKbdyMb25xB4f
     body:
       encoding: US-ASCII
       string: ''
@@ -198,7 +198,7 @@ http_interactions:
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - R_APH3Yr3dd9XJznyWyf
+      - yS6PbZuPKbdyMb25xB4f
   response:
     status:
       code: 200
@@ -215,13 +215,13 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       ETag:
-      - W/"0fb653f991e13c1f1e6f2074eba5eac2"
+      - W/"5641b547b5ad646d9fbceb2ba7c1d635"
       X-Runtime:
-      - '0.006616'
+      - '0.015174'
       X-Request-Id:
-      - ca194c52-69f7-48f5-8698-c827340c0ba9
+      - 5e65b290-4be0-4a19-baef-1ca3399013e7
       Date:
-      - Wed, 20 Nov 2019 21:24:12 GMT
+      - Sat, 04 Jan 2020 20:33:00 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.4
       Server:
@@ -230,7 +230,7 @@ http_interactions:
       - gzip
     body:
       encoding: UTF-8
-      string: '{"_id":"5dd5aef0a9533026d946a09d","created_at":"2019-11-20T21:24:00Z","updated_at":"2019-11-20T21:24:00Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":true,"local_admin":true}'
+      string: '{"_id":"5e10f493a9533066d4210208","created_at":"2020-01-04T20:24:51Z","updated_at":"2020-01-04T20:24:51Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":true,"local_admin":true}'
     http_version: 
-  recorded_at: Wed, 20 Nov 2019 21:24:12 GMT
+  recorded_at: Sat, 04 Jan 2020 20:33:00 GMT
 recorded_with: VCR 4.0.0
